<resources>
    <string name="app_name">AndroidChallengeThree</string>
    <string name="registrasi">REGISTRASI</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="daftar">Daftar</string>
    <string name="atau">Atau</string>
    <string name="facebook">Masuk Dengan Facebook</string>
    <string name="twitter">Masuk Dengan Twitter</string>
    <string name="google">Masuk Dengan Google</string>
    <string name="telur">TELUR</string>
    <string name="_1kg">1Kg</string>
    <string name="rp_26_000">Rp 26.000</string>
    <string name="_30_12_2020_10_00">30-12-2020 10.00</string>
    <string name="gula">Gula</string>
    <string name="beras">Beras</string>
    <string name="_10kg">10Kg</string>
    <string name="_25kg">25Kg</string>
    <string name="_250_000">250.000</string>
    <string name="song1">Opening # 1 ASIAN KUNG-FU GENERATION-Haruka Kanata</string>
    <string name="song2">Opening #2 Little By Little-Kanashimi wo Yasashisha ni</string>
    <string name="song4">Opening #3 FLOW-GO!!!</string>
    <string name="song5">Opening #4 Sambomaster-Seishun Kyousokyokou</string>
    <string name="song6">Opening #5 STANCE PUNKS-No Boy No Cry</string>
    <string name="song7">Opening #6 Snowkel-Namikaze Satellite</string>
    <string name="song_">Opening #7 FLOW - Remember</string>
    <string name="opening_naruto_shippuden">Opening #Naruto Shippuden</string>
    <string name="halaman_registrasi">Halaman Registrasi</string>
    <string name="halaman_list_belanjaan">Halaman List Belanjaan</string>
    <string name="halaman_music_player">Halaman Music Player</string>
    <string name="song8">Opening #8 Samson Kenangan Terindah</string>
    <string name="song10">Last Child Diary Despresiku</string>
    <string name="song9">Opening #9 Dyo Haw Cepu</string>
</resources>