<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="10dp"
        tools:context=".MusicPlayerActivity">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03"
            app:srcCompat="@drawable/naruto"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.095" />

        <ImageButton
            android:id="@+id/imageView9"
            android:layout_width="@dimen/width_song"
            android:layout_height="@dimen/height_song"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.035"
            android:background="@drawable/ic_baseline_play_circle_filled_24"/>

        <ImageButton
            android:id="@+id/imageView10"
            android:layout_width="@dimen/width_song"
            android:layout_height="@dimen/height_song"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintEnd_toStartOf="@+id/imageView9"
            app:layout_constraintHorizontal_bias="0.763"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            app:layout_constraintVertical_bias="1.0"
            android:background="@drawable/ic_baseline_skip_previous_24"/>

        <ImageButton
            android:id="@+id/imageView11"
            android:layout_width="@dimen/width_song"
            android:layout_height="@dimen/height_song"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.282"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            app:layout_constraintVertical_bias="0.0"
            android:background="@drawable/ic_baseline_skip_next_24"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opening_naruto_shippuden"
            android:textColor="@color/song_text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.021" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song1"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:layout_constraintVertical_bias="0.077"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song2"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.068"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song4"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintVertical_bias="0.078"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song5"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:layout_constraintVertical_bias="0.087"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song6"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintVertical_bias="0.101"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song7"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintVertical_bias="0.112"
            tools:layout_editor_absoluteX="15dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            app:layout_constraintVertical_bias="0.166"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song8"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            app:layout_constraintVertical_bias="0.208"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="9dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song9"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21"
            app:layout_constraintVertical_bias="0.275"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song10"
            android:layout_marginTop="10dp"
            android:textColor="@color/song_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22"
            app:layout_constraintVertical_bias="0.6"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="9dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>