<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".RegistrasiActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrasi"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="@dimen/edit_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.648"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.028" />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="@dimen/edit_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/tanggal_lahir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.675"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="0.042" />

        <EditText
            android:id="@+id/editTextTextPersonName8"
            android:layout_width="@dimen/edit_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.675"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7"
            app:layout_constraintVertical_bias="0.051" />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="@dimen/edit_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.675"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8"
            app:layout_constraintVertical_bias="0.068" />

        <EditText
            android:id="@+id/editTextTextPersonName10"
            android:layout_width="@dimen/edit_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.675"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9"
            app:layout_constraintVertical_bias="0.064" />

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="@dimen/edit_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/confirm_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.675"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10"
            app:layout_constraintVertical_bias="0.081" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintHorizontal_bias="0.883"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName7"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName7"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName7"
            app:layout_constraintVertical_bias="0.45"
            app:srcCompat="@drawable/ic_baseline_date_range_24" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName8"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName8"
            app:layout_constraintHorizontal_bias="0.775"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName8"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_baseline_email_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName9"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName9"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName9"
            app:layout_constraintVertical_bias="0.6"
            app:srcCompat="@drawable/ic_baseline_phone_android_24" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName10"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName10"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName10"
            app:layout_constraintVertical_bias="0.45"
            app:srcCompat="@drawable/ic_baseline_security_24" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn"
            android:background="#000"
            android:text="@string/daftar"
            android:textColor="@color/btn_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11"
            app:layout_constraintVertical_bias="0.037"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atau"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.024" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn"
            android:layout_marginTop="5dp"
            android:background="#3F51B5"
            android:text="@string/facebook"
            android:textColor="@color/btn_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn"
            android:layout_marginTop="5dp"
            android:background="#2196F3"
            android:text="@string/twitter"
            android:textColor="@color/btn_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn"
            android:layout_marginTop="5dp"
            android:background="#BA0C0C"
            android:text="@string/google"
            android:textColor="@color/btn_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>